--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.2.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'org.parceler:parceler-api:1.0.4'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
 }
