--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,6 @@
             android:name="com.tam.advancedtwitter.activities.LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -54,8 +53,13 @@
         <activity
             android:name="com.tam.advancedtwitter.activities.ComposeActivity"
             android:label="@string/title_activity_compose"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:parentActivityName="com.tam.advancedtwitter.activities.TimelineActivity"></activity>
+            android:parentActivityName="com.tam.advancedtwitter.activities.TimelineActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name="com.tam.advancedtwitter.activities.ProfileActivity"
+            android:label="@string/title_activity_profile"
+            android:parentActivityName="com.tam.advancedtwitter.activities.TimelineActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
